<resources>
    <string name="app_name">Smart BMI Calculator</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="calculate_bmi">Calculate BMI</string>
    <string name="voice_input_bmi">Voice Input for BMI Calculation</string>
    <string name="speech_recognition_not_supported">Speech recognition not supported on this device.</string>
    <string name="could_not_understand_weight_height">Could not understand weight and height from your speech. Please try again.</string>
    <string name="could_not_find_weight">Could not find weight. Please say \'weight is [value] kg/pound\'</string>
    <string name="could_not_find_height">Could not find height. Please say \'height is [value] cm/inch\'</string>
    <string name="please_enter_weight">Please enter weight</string>
    <string name="please_enter_height">Please enter height</string>
    <string name="please_enter_valid_numbers">Please enter valid numbers for weight and height</string>
    <string name="suggestion">Say something like: weight is 60kg and height is 160cm</string>
    <string name="enter_height_cm">Enter height (cm)</string>
    <string name="enter_height_inch">Enter height (inch)</string>
    <string name="inch">inch</string>
    <string name="cm">cm</string>
    <string name="kg">kg</string>
    <string name="enter_weight_kg_hint">Enter weight (kg)</string>
    <string name="enter_weight_pound_hint">Enter weight (pound)</string>
    <string name="enter_height_cm_hint">Enter height (cm)</string>
    <string name="enter_height_inch_hint">Enter height (inch)</string>
    <string name="pound">Pound</string>
    <string name="bmi_chart">BMI Chart</string>
    <string name="bmi_indicator">BMI Indicator</string>
</resources>