<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:contentDescription="@string/voice_input_bmi"
        android:onClick="invokeAIAssistant"
        app:layout_constraintBottom_toTopOf="@+id/radioGroupWeightUnit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_btn_speak_now" />

    <RadioGroup
        android:id="@+id/radioGroupWeightUnit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayoutWeight">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioButtonWeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/weight" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioButtonPound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pound" />
    </RadioGroup>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textViewWeightLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/weight"
        app:layout_constraintBottom_toTopOf="@+id/radioGroupHeightUnit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupWeightUnit" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutWeight"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/enter_weight_kg_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewWeightLabel"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupWeightUnit">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />

    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/radioGroupHeightUnit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutWeight">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioButtonCm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/cm" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioButtonInch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inch" />
    </RadioGroup>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textViewHeightLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/height"
        app:layout_constraintBottom_toBottomOf="@+id/textInputLayoutHeight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupHeightUnit" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutHeight"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/enter_height_cm_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewHeightLabel"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupHeightUnit">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextHeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonCalculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/calculate_bmi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutHeight" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textViewResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text=""
        android:textAppearance="?attr/textAppearanceHeadline6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonCalculate" />

</androidx.constraintlayout.widget.ConstraintLayout>
